2007-07-13  Scroll  <scroll@localhost.localdomain>

	* Better error messages; working on new highlighting using plugin
	classes.

2007-07-12  Scroll  <scroll@localhost.localdomain>

	* Changed some meta-component details: meta module is imported
	always, but the pulldown menu 'component' command is added only
	with --meta option; added XRCEDPATH scanning for plugins.

2007-07-11  Scroll  <scroll@localhost.localdomain>

	* When no items are selected the 'root' attributes are shown
	(currently only encoding); added support for attributes which are
	stored as XML element attributes (used for CRX component plugins);
	ignoring files in plugin directory starting with an underscore.

2007-07-09  Scroll  <scroll@localhost.localdomain>

	* Command line arguments are parsed again, using optparse;
	wxMAC-specific fixes for frame positioning; added more component
	icons generated from screenshots; configuration saving restored;
	"push pin" button for sticky attribute panel page. Bugs to be
	fixed: PyDeadObjectError is exiting with not the first attribute
	page selected.

2007-07-06  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Use GridBagSizer for tool placement, with automatic position
	checking and generation of default positions; maketools script can
	now generate PNG files for most controls from tools.xrc on wxGTK.

2007-07-05  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Moved deprecated xrced.py,panel.py,tree.py and xxx.py to attic/,
	test.py renamed to xrced.py.

	* Added new bitmaps for tool panel. Using BMP format. Files
	related to core componetns are in plugins/bitmaps, while toolbook
	tab bitmaps are in the old src-images. Will think about better
	directory structure. Implemented new tool panel using
	Toolbook. Trying to generate tool images automatically by
	misc/maketools.py script. New experimental feature is being
	tested: components plugins defined as XML resources.

	* Undo/redo fixes, using UndoGlobal as a temporaty solution for