@@ -17,3 +17,5 @@ TODO for XRCed with plugins
 - import XRC files
 
 - selecting object by clicking in test window
+
+- fix DnD highlight for miniframe
